@@ -131,8 +131,8 @@ c58a162ab33e2d4841b7ccde59fa022506ef5dcc assets/createbigcannons/blockstates/ver
 8cc31b88cd6093baa4caddb02ff7f7ff793299f4 assets/createbigcannons/blockstates/wrought_iron_cannon_end.json
 303668cdb3754018ca137ea6074801c6927d3987 assets/createbigcannons/blockstates/wrought_iron_drop_mortar_end.json
 d942040026b2849ca2153a9933e8dc0c5c39f3c9 assets/createbigcannons/blockstates/yaw_controller.json
-abfebcca304c81bbea14d15f18d3732754f36deb assets/createbigcannons/lang/en_ud.json
-1c3554475611f9e36f0f8067f158c6bdc7ce1b49 assets/createbigcannons/lang/en_us.json
+d31c0d1418688f8e2b873859d7f8872324260e88 assets/createbigcannons/lang/en_ud.json
+738401f6f3a1b1d8d181a22915a2646ebca7c4e1 assets/createbigcannons/lang/en_us.json
 c6129d8380bcb26579fc200fc054f4a485ad9b2a assets/createbigcannons/models/block/ap_shell.json
 14e7b948a05007b8c96e35f92f0bff66427de7b8 assets/createbigcannons/models/block/ap_shot.json
 7157cc923bd4f217cb47117fbfe2b9542e367d17 assets/createbigcannons/models/block/autocannon/bronze_autocannon_spring.json
